# ClawSeat-Windows

./: .env.example  .gitignore  CHANGELOG.md  README.md  agent-launcher.command  claude-minimax.command  codex.command  gemini.command  launch-clawseat.ps1  launch-simple.bat  manifest.toml  marketplace.json  pyproject.toml  test_3panes_claude.py  test_3panes_skill.ps1
.claude-plugin/: plugin.json
core/: __init__.py  _bootstrap.py  bootstrap_receipt.py  harness_adapter.py  preflight.py  resolve.py  skill_registry.py  skill_registry.toml
docs/: AGENT_ADMIN.md  ARCHITECTURE.md  CANONICAL-FLOW.md  GSTACK.md  HACKING.md  INSTALL.md  INSTALL.zh-CN.md  INSTALL_AGENT_PROMPT.md  INSTALL_AGENT_PROMPT.zh-CN.md  ITERM_TMUX_REFERENCE.md  OPENCLAW.md  WINDOWS.md  auth-modes.md  clawseat-windows-v0.1-2026-05-18-011256.md  peer-protocol.md  resume-protocol.md
scripts/: apply-koder-overlay.sh  check-syntax.ps1  clawseat-update-projects.sh  clawseat-update.sh  clean-slate.ps1  clean-slate.sh  cleanup-stale-memories-window.sh  com.clawseat.task-watch.plist.in  delete-project.sh  delete-seat.sh  env_scan.py  install-deps.ps1  install-windows.ps1  install.sh  install_clawseat_autoupdate.py  install_multi.sh  launch-grid.sh  launch-windows.ps1  memory-brief-mtime-check.sh  recover-grid.sh  restart-project.sh  restart-seat.sh  smoke-windows-tmux.ps1  task-watch.sh  test-agentsroot.ps1  test-configdir.ps1  test-fast.sh  test-half1.ps1  test-half1b.ps1  test-joinpath.ps1  test-minimal.ps1  test-params.ps1  test-reporoot.ps1  test-run.ps1  test-run2.ps1  test-scope.ps1  test-scriptdir.ps1  (+7 more)
(+858 files in other folders)
