[project]
name = "clawseat"
version = "0.2.1"
description = "ClawSeat 多席位控制面框架"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "mypy>=1.10",
  "tomli",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
  "host: requires maintainer workstation state, real local repositories, or user-scoped tools",
  "slow: intentionally exercises sleeps, full install paths, or process-heavy smoke checks",
  "legacy: protects deprecated or compatibility behavior that should be reviewed before removal",
  "script: executes shell/CLI/subprocess surfaces instead of pure in-process units",
]

[tool.setuptools.packages.find]
include = ["core*", "adapters*", "shells*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false  # Too many Hooks DI callables return Any — enable after typing Hooks
warn_unused_configs = true
ignore_missing_imports = true

# Strict checking for new/critical modules
[[tool.mypy.overrides]]
module = ["core.resolve", "core.skill_registry", "core.transport"]
warn_return_any = true
disallow_untyped_defs = true
